Добавил дополнительный обработчик в ErrorHandler